--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Faculdade Impacta</title>
+		<link rel="stylesheet" href="site.css"/>
 	</head>
 	<body>
 		<header>
@@ -9,9 +10,9 @@
 			<h1>Faculdade Impacta de Tecnologia</h1>
 			<h2>A TECNOLOGIA MUDA O SEU FUTURO</h2>
 			<nav>
-				<ul>
-					<li><a href="cursos.html">CURSOS</a></li>
-					<li><a  href="entrar.html">ENTRAR</a></li>
+				<ul class="sem-bullets">
+					<li><a href="cursos.html" class="link" >CURSOS</a></li>
+					<li><a  href="entrar.html" class="link" >ENTRAR</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -30,7 +31,7 @@
 		</main>
 		<footer>
 			<strong>11 3254-8300 - Impacta 2018 - 
-			]Todos os direitos reservados. </strong>
+			Todos os direitos reservados. </strong>
 		</footer>
 	</body>
 </html>
